<resources>
    <string name="app_name">AgendApp</string>
    <string name="nav_header_title">Alexander Esteban Zapata</string>
    <string name="nav_header_subtitle">alexanderesteban7@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_save_sd_card">Guardar datos en SD</string>
    <string name="menu_sqllite">SQL Lite</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="fragment_home_txtNombre">Nombre del contacto</string>
    <string name="fragment_home_txtDatos">Datos del contacto</string>
    <string name="fragment_home_btnGuardar">Guardar</string>
    <string name="fragment_home_btnBuscar">Buscar</string>

    <string name="fragment_saveSDCard_txtFileName">Nombre del archivo</string>
    <string name="fragment_saveSDCard_btnGuardar">Guardar</string>
    <string name="fragment_saveSDCard_btnConsultar">Consultar</string>

    <string name="fragment_sqllite_txtCode">Ingrese el código del producto</string>
    <string name="fragment_sqllite_txtDescription">Agregue la descripción del producto</string>
    <string name="fragment_sqllite_txtPrice">Ingrese el precio</string>

</resources>
