<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_sqllite"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/txtCode"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/fragment_sqllite_txtCode"
        android:inputType="numberSigned"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtPrice"
        android:layout_width="298dp"
        android:layout_height="56dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/fragment_sqllite_txtPrice"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescription" />

    <EditText
        android:id="@+id/txtDescription"
        android:layout_width="300dp"
        android:layout_height="202dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/fragment_sqllite_txtDescription"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCode" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="28dp"
        android:clickable="true"
        android:focusable="auto"
        android:onClick="addRecord"
        app:backgroundTint="#009688"
        app:hoveredFocusedTranslationZ="10sp"
        app:layout_constraintBottom_toTopOf="@+id/fabSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_save" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="28dp"
        android:clickable="true"
        android:focusable="auto"
        app:backgroundTint="#009688"
        app:layout_constraintBottom_toTopOf="@+id/fabUpdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_search" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="auto"
        app:backgroundTint="#F44336"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fabUpdate"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="auto"
        app:backgroundTint="#009688"
        app:borderWidth="1sp"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_upload_you_tube" />

</androidx.constraintlayout.widget.ConstraintLayout>